# wxwidgets_opengl_app

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  GLCanvas.cpp  GLCanvas.h  MainFrame.cpp  MainFrame.h
src/panels/: SidePanel.cpp  SidePanel.h
